# Gisleburt.github.io

./: .env  .eslintrc.js  .mocharc.js  CNAME  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  README.md  arrow.css  bower.json  cloud.js  getContentfulEnvironment.js  gulpfile.js  index-no-hydrate.html  index.html  next.config.js  package.json  style.css
components/: ContactDetails.test.tsx  ContactDetails.tsx  FullWorkHistory.tsx  PersonalStatement.tsx  SiteHead.test.tsx  SiteHead.tsx  Skills.tsx  SkillsList.tsx  StyleReset.tsx  Title.test.tsx  Title.tsx  WorkHistory.tsx  WorkHistoryItem.tsx
components/css/: Global.tsx
components/cv/: ContactDetails.test.tsx  ContactDetails.tsx  PersonalStatement.test.tsx  PersonalStatement.tsx  Skills.test.tsx  Skills.tsx  SkillsList.test.tsx  SkillsList.tsx  SkillsListCategory.test.tsx  SkillsListCategory.tsx  WorkHistory.test.tsx  WorkHistory.tsx  WorkHistoryItem.test.tsx  WorkHistoryItem.tsx
components/html/: H1.ts  H2.ts  H3.ts  Section.ts  Section.tsx
components/modules/: Body.ts  (+6 more)
content/: content.ts  contentful.ts  types.d.ts  types.ts
css/: style.css
docs/: csr-990ed816f8bf49a4.js  csr-990ed816f8bf49a4_bg.wasm  csr-f03e17c94ad57a1f.js  csr-f03e17c94ad57a1f_bg.wasm  index.html  site.css
js/: output.js  portfolio.js
pages/: [[...path]].tsx  index.tsx
public/: CNAME  site.css
sass/: style.scss
src/: achievements.rs  home.rs  interests.rs  lib.rs  main.rs  nav.rs  presentations.rs  skills.rs  who.rs
types/: contentful.d.ts  contentfulPredicates.ts  domain.d.ts  domainPredicates.ts  mapContentfulToDomain.ts
(+38 files in other folders)
